Use LESS font-size vars rather than px values Bug 1107990

--- a/media/css/firefox/android.less
+++ b/media/css/firefox/android.less
@@ -908,7 +908,7 @@ html[lang="ja"] #privacy p {
         }
 
         .lead, a {
-            font-size: 16px;
+            font-size: @largeFontSize;
         }
 
         .content-primary {
