--- a/media/css/firefox/australis/australis-page-common.less
+++ b/media/css/firefox/australis/australis-page-common.less
@@ -133,7 +133,7 @@ header[role="banner"],
         font-size: 30px;
     }
     p {
-        font-size: 16px;
+        font-size: @largeFontSize;
         line-height: 1.5;
         margin-bottom: 20px;
     }
@@ -361,7 +361,7 @@ footer[role="contentinfo"] {
         list-style-type: none;
         width: 100%;
         padding: 0;
-        font-size: 12px;
+        font-size: @smallFontSize;
         li {
             float: left;
             width: 468px;
@@ -382,7 +382,7 @@ footer[role="contentinfo"] {
         a:visited {
             color: @textColorTertiary;
             &.more {
-                font-size: 16px;
+                font-size: @largeFontSize;
                 color: #484848;
             }
         }
