--- a/media/css/firefox/australis/australis-ui-tour.less
+++ b/media/css/firefox/australis/australis-ui-tour.less
@@ -319,7 +319,7 @@ body.noscroll {
     width: 60px;
     margin: @baseLine @baseLine 0 10px;
     text-align: center;
-    font-size: 12px;
+    font-size: @smallFontSize;
     color: #424F5A;
     line-height: 22px;
     .progress {
