--- a/media/css/firefox/desktop/common.less
+++ b/media/css/firefox/desktop/common.less
@@ -133,7 +133,7 @@ html[dir="rtl"] {
     float: right;
     margin-top: 10px;
     font-weight: normal;
-    font-size: 16px;
+    font-size: @largeFontSize;
     padding: 8px 30px;
     border-radius: .4em;
 }
@@ -388,7 +388,7 @@ html[lang^="en"] {
         border-color: rgba(0, 0, 0, .2);
         line-height: 40px;
         color: #fff;
-        font-size: 16px;
+        font-size: @largeFontSize;
         text-shadow: none;
     }
 
@@ -780,7 +780,7 @@ html[dir="rtl"] {
 
     #main-content .container {
         min-height: 0;
-        font-size: 16px;
+        font-size: @largeFontSize;
 
         h2 {
             font-size: 30px;
