--- a/media/css/firefox/desktop/customize.less
+++ b/media/css/firefox/desktop/customize.less
@@ -123,7 +123,7 @@ html[dir="rtl"] {
     .container {
         min-height: 440px;
         padding-bottom: 0;
-        font-size: 16px;
+        font-size: @largeFontSize;
     }
 
     .next {
@@ -197,7 +197,7 @@ html[dir="rtl"] {
     }
 
     .more {
-        font-size: 14px;
+        font-size: @baseFontSize;
     }
 }
 
@@ -883,7 +883,7 @@ html[dir="rtl"] {
             background-position: -320px -360px;
             color: #5498cc;
             text-align: right;
-            font-size: 14px;
+            font-size: @baseFontSize;
 
             a {
                 display: inline-block;
@@ -1756,7 +1756,7 @@ html[dir="rtl"] {
             }
 
             p {
-                font-size: 16px;
+                font-size: @largeFontSize;
             }
         }
 
