--- a/media/css/firefox/desktop/fast.less
+++ b/media/css/firefox/desktop/fast.less
@@ -740,11 +740,11 @@ html[dir="rtl"] {
     }
 
     #main-content .container {
-        font-size: 16px;
+        font-size: @largeFontSize;
     }
 
     #intro .lead {
-        font-size: 16px;
+        font-size: @largeFontSize;
     }
 
     #cutting-edge {
