--- a/media/css/firefox/desktop/index.less
+++ b/media/css/firefox/desktop/index.less
@@ -265,7 +265,7 @@
             opacity: 1;
             background-position: -120px -600px;
             text-align: right;
-            font-size: 14px;
+            font-size: @baseFontSize;
 
             a {
                 display: inline-block;
