--- a/media/css/firefox/desktop/tips.less
+++ b/media/css/firefox/desktop/tips.less
@@ -118,7 +118,7 @@
             background: url(/media/img/firefox/desktop/tips/sprite-tabs.png) left -84px no-repeat;
             text-align: center;
             color: #fff;
-            font-size: 12px;
+            font-size: @smallFontSize;
             text-transform: uppercase;
             line-height: 1.2;
             padding: 0 30px;
@@ -155,7 +155,7 @@
 
         span {
             border-bottom: 0;
-            font-size: 12px;
+            font-size: @smallFontSize;
         }
     }
 
@@ -190,7 +190,7 @@ html[lang^='en'] #tips-nav-direct li a span:after {
     margin-left: 40px;
     padding: 30px @baseLine 0;
     text-align: center;
-    font-size: 16px;
+    font-size: @largeFontSize;
     line-height: 1.6;
     color: @textColorTertiary;
     .open-sans-light();
