--- a/media/css/firefox/desktop/trust.less
+++ b/media/css/firefox/desktop/trust.less
@@ -19,7 +19,7 @@
 
     li {
         .open-sans;
-        font-size: 14px;
+        font-size: @baseFontSize;
     }
 }
 
@@ -227,7 +227,7 @@ html[dir="rtl"] {
 
         li {
             text-align: center;
-            font-size: 16px;
+            font-size: @largeFontSize;
         }
     }
 
