--- a/media/css/firefox/new.less
+++ b/media/css/firefox/new.less
@@ -62,7 +62,7 @@
     display: block;
     padding: 0;
     background: transparent;
-    font-size: 16px;
+    font-size: @largeFontSize;
 }
 
 
@@ -347,7 +347,7 @@ html[lang|="en"] #main-feature h1.large span:first-child {
             *display: inline;
             overflow: hidden;
             text-align: left;
-            font-size: 12px;
+            font-size: @smallFontSize;
             color: @textColorTertiary;
             font-style: italic;
             .screen {
@@ -468,7 +468,7 @@ html[lang|="en"] #main-feature h1.large span:first-child {
     text-align: left;
     margin: 5px auto 0 -35px;
     font-style: normal;
-    font-size: 16px;
+    font-size: @largeFontSize;
     div > a {
         background: none;
         padding: 0px 28px 0px 0;
@@ -678,7 +678,7 @@ html[dir="rtl"] {
     .ready-for-scene2 {
         .thankyou {
             margin: 10px 0 0 0;
-            font-size: 14px;
+            font-size: @baseFontSize;
             letter-spacing: auto;
         }
 
