--- a/media/css/firefox/nightly_firstrun.less
+++ b/media/css/firefox/nightly_firstrun.less
@@ -94,7 +94,7 @@ main {
         }
         a.button {
             color: white;
-            font-size: 16px;
+            font-size: @largeFontSize;
             font-weight: normal;
             text-transform: uppercase;
             width: 100%;
@@ -126,12 +126,12 @@ main {
     #nightly-box .description,
     .blue-box.badge a,
     .blue-box.l10n a {
-        font-size: 16px;
+        font-size: @largeFontSize;
         color: #79d8ff;
         text-shadow: 0 1px 0 rgba(0, 0, 0, .15);
     }
     .blue-box.l10n {
-        font-size: 16px;
+        font-size: @largeFontSize;
         color: white;
         text-shadow: 0 1px 0 rgba(0, 0, 0, .15);
         h4 {
