--- a/media/css/firefox/os/firefox-os.less
+++ b/media/css/firefox/os/firefox-os.less
@@ -213,7 +213,7 @@ html, body {
     }
 
     p {
-        font-size: 14px;
+        font-size: @baseFontSize;
         &:focus {
             outline: none;
         }
@@ -371,7 +371,7 @@ section p, header p {
 
       a {
         .open-sans-light;
-        font-size: 16px;
+        font-size: @largeFontSize;
         font-weight: normal;
       }
 
@@ -465,7 +465,7 @@ section p, header p {
       padding-left: 50px;
       background: #fff;
       text-align: left;
-      font-size: 16px;
+      font-size: @largeFontSize;
       color: @textColorTertiary;
     }
     .type {
@@ -483,7 +483,7 @@ section p, header p {
   }
   .small {
     float: left;
-    font-size: 14px;
+    font-size: @baseFontSize;
     line-height: 1.5em;
     width: 240px;
     text-align: left;
@@ -1394,7 +1394,7 @@ html[lang="pl"] {
     margin: 5px;
     a {
       display: block;
-      font-size: 16px;
+      font-size: @largeFontSize;
       color: #149fd3;
       letter-spacing: 0px;
       &:after {
@@ -1610,7 +1610,7 @@ html[lang|="en"].js {
     }
     ul {
       li {
-        font-size: 14px;
+        font-size: @baseFontSize;
       }
       .discover {
         margin-top: 0;
@@ -1860,7 +1860,7 @@ html[lang|="en"].js {
       .small {
         float: none;
         width: auto;
-        font-size: 14px;
+        font-size: @baseFontSize;
         text-align: center;
       }
       h2 {
@@ -1868,7 +1868,7 @@ html[lang|="en"].js {
         br { display: none; } // ignore any custom line breaks (no room for that on mobile)
       }
       p {
-        font-size: 16px;
+        font-size: @largeFontSize;
       }
       .button {
         float: none;
@@ -1883,7 +1883,7 @@ html[lang|="en"].js {
       width: auto;
       li {
         margin-left: 0;
-        font-size: 14px;
+        font-size: @baseFontSize;
       }
       .discover {
         margin-top: 0;
@@ -2109,7 +2109,7 @@ html[lang|="en"].js {
       left: 65px;
       right: 8px;
       .small {
-        font-size: 12px;
+        font-size: @smallFontSize;
       }
     }
     ul {
