--- a/media/css/firefox/os/mwc-2014-preview.less
+++ b/media/css/firefox/os/mwc-2014-preview.less
@@ -72,7 +72,7 @@ html, body {
   float: left;
   width: 480px;
   color: #fff;
-  font-size: 16px;
+  font-size: @largeFontSize;
   padding-bottom: @baseLine * 3;
 
   header {
@@ -186,7 +186,7 @@ html, body {
       float: left;
       list-style-type: none;
       margin-left: 0;
-      font-size: 12px;
+      font-size: @smallFontSize;
       line-height: 20px;
 
       h4 {
@@ -458,7 +458,7 @@ html, body {
 
   #intro-copy {
     width: 380px;
-    font-size: 14px;
+    font-size: @baseFontSize;
 
     h1 {
       font-size: 60px;
@@ -553,14 +553,14 @@ html, body {
   #intro-copy {
     float: none;
     width: 300px;
-    font-size: 14px;
+    font-size: @baseFontSize;
 
     h1 {
       font-size: 44px;
     }
 
     h2 {
-      font-size: 14px;
+      font-size: @baseFontSize;
     }
 
     br {
@@ -602,7 +602,7 @@ html, body {
 
       li strong {
         margin-bottom: @baseLine/2;
-        font-size: 16px;
+        font-size: @largeFontSize;
       }
     }
 
@@ -700,7 +700,7 @@ html, body {
   #intro-copy {
     float: none;
     width: 420px;
-    font-size: 14px;
+    font-size: @baseFontSize;
 
     h1 {
       font-size: 60px;
@@ -741,7 +741,7 @@ html, body {
 
       li strong {
         margin-bottom: @baseLine/2;
-        font-size: 16px;
+        font-size: @largeFontSize;
       }
     }
 
