--- a/media/css/firefox/partners.less
+++ b/media/css/firefox/partners.less
@@ -184,7 +184,7 @@
                 h4 {
                     text-transform: uppercase;
                     font-weight: bold;
-                    font-size: 16px;
+                    font-size: @largeFontSize;
                     letter-spacing: normal;
                     margin-bottom: 5px;
                 }
@@ -358,7 +358,7 @@
                 text-align: left;
                 color: @textColorSecondary;
                 font-weight: bold;
-                font-size: 16px;
+                font-size: @largeFontSize;
                 text-transform: uppercase;
             }
             ul {
@@ -465,7 +465,7 @@
             a {
                 line-height: @baseLine * 2;
                 font-style: normal;
-                font-size: 16px;
+                font-size: @largeFontSize;
                 padding-left: 10px;
                 padding-right: 10px;
                 &:after {
@@ -563,7 +563,7 @@
 
 #form {
     p {
-        font-size: 16px;
+        font-size: @largeFontSize;
     }
     label {
         display: block;
@@ -626,7 +626,7 @@
 
     label.error {
         .open-sans;
-        font-size: 12px;
+        font-size: @smallFontSize;
         color: rgb(175,50,50);
         font-weight: bold;
         text-transform: uppercase;
@@ -827,7 +827,7 @@
 
         color: #fff;
         .open-sans;
-        font-size: 16px;
+        font-size: @largeFontSize;
         padding: 5px 28px 5px 5px;
         cursor: pointer;
         border: 0;
