--- a/media/css/firefox/partners/desktop.less
+++ b/media/css/firefox/partners/desktop.less
@@ -629,7 +629,7 @@ body #partner-menu, body #mwc-menu {
             color: #fff;
             text-transform: uppercase;
             font-weight: bold;
-            font-size: 12px;
+            font-size: @smallFontSize;
             text-align: center;
         }
     }
@@ -803,7 +803,7 @@ html[lang="el"] {
     }
 
     .partner-article .article-header nav a {
-        font-size: 12px;
+        font-size: @smallFontSize;
         line-height: 1.2;
     }
 
@@ -833,7 +833,7 @@ html[lang="ro"],
 html[lang="sr"] {
     #explore,
     #overview .intro #more-partners {
-        font-size: 14px;
+        font-size: @baseFontSize;
         line-height: 1.2;
         font-family: inherit;
     }
