--- a/media/css/firefox/search_tour/common.less
+++ b/media/css/firefox/search_tour/common.less
@@ -202,7 +202,7 @@ footer[role="contentinfo"] {
         list-style-type: none;
         width: 100%;
         padding: 0;
-        font-size: 12px;
+        font-size: @smallFontSize;
         .clearfix();
         li {
             float: left;
@@ -225,7 +225,7 @@ footer[role="contentinfo"] {
         a:visited {
             color: @textColorTertiary;
             &.more {
-                font-size: 16px;
+                font-size: @largeFontSize;
                 color: @textColorSecondary;
 
                 &:after {
