--- a/media/css/firefox/unsupported.less
+++ b/media/css/firefox/unsupported.less
@@ -100,7 +100,7 @@ html[lang='te'] li {
 
 /* Tweaks for Japanese */
 html[lang='ja'] body {
-    font-size: 12px;
+    font-size: @smallFontSize;
     line-height: 1.5;
     font-family: "Lucida Grande", "DejaVu Sans", "Bitstream Vera Sans", "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "メイリオ", "Meiryo", "Verdana", "ＭＳ Ｐゴシック", "MS PGothic", "VL Pゴシック", "Takao Pゴシック", "IPA Pゴシック", sans-serif;
 }
