--- a/media/css/firefox/whatsnew.less
+++ b/media/css/firefox/whatsnew.less
@@ -272,7 +272,7 @@ html[lang=ru] {
         font-size: 52px;
     }
     p {
-        font-size: 16px;
+        font-size: @largeFontSize;
     }
     }
 
@@ -356,7 +356,7 @@ html[lang=ru] {
         font-size: 32px;
     }
     p {
-        font-size: 16px;
+        font-size: @largeFontSize;
     }
     }
 
