--- a/media/css/foundation/annual2011.less
+++ b/media/css/foundation/annual2011.less
@@ -864,7 +864,7 @@ body.noscroll {
   #story-slider,
   #story-slider-clone {
     .vcard {
-      font-size: 12px;
+      font-size: @smallFontSize;
       min-height: 77px;
     }
   }
@@ -958,7 +958,7 @@ body.noscroll {
   .mob-topics {
     padding: 0 20px 20px;
     margin: 0 0 20px;
-    font-size: 12px;
+    font-size: @smallFontSize;
     li {
       padding-top: 100px;
     }
