--- a/media/css/foundation/foundation.less
+++ b/media/css/foundation/foundation.less
@@ -56,12 +56,12 @@ img {
     letter-spacing: normal;
   }
   h4 {
-    font-size: 16px;
+    font-size: @largeFontSize;
     letter-spacing: normal;
   }
   .download {
     margin: 0 0 .5em;
-    font-size: 12px;
+    font-size: @smallFontSize;
   }
 }
 
@@ -73,7 +73,7 @@ img {
 .nav-paging {
   clear: both;
   list-style: none;
-  font-size: 16px;
+  font-size: @largeFontSize;
   font-style: italic;
   margin: 15px 0;
   padding: 0;
@@ -106,7 +106,7 @@ img {
 }
 
 .return-to-top {
-  font-size: 12px;
+  font-size: @smallFontSize;
 }
 
 .trademarks {
