--- a/media/css/gigabit/gigabit.less
+++ b/media/css/gigabit/gigabit.less
@@ -191,13 +191,13 @@
       font-weight: bold;
       .open-sans;
       margin: 1em 0 1em 0;
-      font-size: 14px;
+      font-size: @baseFontSize;
       color: #333;
     }
   }
 
   .section-header {
-    font-size: 14px;
+    font-size: @baseFontSize;
     font-weight: bold;
     text-decoration: underline;
     display: inline;
