--- a/media/css/mozorg/about-forums.less
+++ b/media/css/mozorg/about-forums.less
@@ -42,7 +42,7 @@
             position: absolute;
             top: 0;
             left: -1em;
-            font-size: 12px;
+            font-size: @smallFontSize;
             color: #ccc;
         }
     }
