--- a/media/css/mozorg/contact-spaces.less
+++ b/media/css/mozorg/contact-spaces.less
@@ -352,7 +352,7 @@
         .box-shadow(0 1px 0 rgba(0, 0, 0, .1));
         background: @lightGray;
         border: 1px solid @lightGray;
-        font-size: 12px;
+        font-size: @smallFontSize;
         margin: 0 0 20px;
         min-height: 210px;
         padding: 20px 10px;
@@ -738,7 +738,7 @@
     }
 
     .category-tabs {
-        font-size: 14px;
+        font-size: @baseFontSize;
         left: 0;
 
         li {
