--- a/media/css/mozorg/history-slides.less
+++ b/media/css/mozorg/history-slides.less
@@ -34,7 +34,7 @@
     }
 
     .intro {
-        font-size: 16px;
+        font-size: @largeFontSize;
         margin: 0 @gridColumnWidth 1.5em;
     }
 }
