--- a/media/css/mozorg/home.less
+++ b/media/css/mozorg/home.less
@@ -629,12 +629,12 @@
     }
 
     .panel-title {
-        font-size: 16px;
+        font-size: @largeFontSize;
         width: 160px;
     }
 
     .wide .panel-content {
-        font-size: 16px;
+        font-size: @largeFontSize;
         height: 280px;
         width: 250px;
         padding: 80px 20px 20px 200px;
@@ -645,7 +645,7 @@
         }
 
         .go {
-            font-size: 16px;
+            font-size: @largeFontSize;
         }
 
         & > a {
@@ -799,7 +799,7 @@
         padding: .75em 35px .75em 40%;
         min-height: 3em;
         text-align: left;
-        font-size: 16px;
+        font-size: @largeFontSize;
 
         &:after {
             content: '\25bc'; /* Down arrow */
@@ -810,7 +810,7 @@
     }
 
     .panel-content {
-        font-size: 16px;
+        font-size: @largeFontSize;
         line-height: 1.2;
         width: 100%;
         height: 100%;
