--- a/media/css/mozorg/home/home.less
+++ b/media/css/mozorg/home/home.less
@@ -190,7 +190,7 @@ h1, h2, h3, h4, h5, h6 {
         }
 
         .os_android .download-subtitle {
-            font-size: 16px;
+            font-size: @largeFontSize;
             margin-right: 0px;
             text-align: center;
         }
@@ -435,7 +435,7 @@ h1, h2, h3, h4, h5, h6 {
 
             h3.next {
                 color: #c13832;
-                font-size: 16px;
+                font-size: @largeFontSize;
                 font-style: italic;
 
                 &:after {
