--- a/media/css/mozorg/itu.less
+++ b/media/css/mozorg/itu.less
@@ -24,7 +24,7 @@ hgroup {
         ol {
             font-size: 24px;
             p {
-                font-size: 14px;
+                font-size: @baseFontSize;
             }
         }
         h3 {
