--- a/media/css/mozorg/manifesto.less
+++ b/media/css/mozorg/manifesto.less
@@ -227,7 +227,7 @@
         color: #FFF;
         text-shadow: none;
         .open-sans;
-        font-size: 14px;
+        font-size: @baseFontSize;
         text-transform: uppercase;
     }
 
@@ -277,7 +277,7 @@
             float: left;
             margin: 0 10px 10px 0;
             width: 120px;
-            font-size: 12px;
+            font-size: @smallFontSize;
             list-style-type: none;
         }
 
@@ -314,7 +314,7 @@
         footer {
             margin-top: 10px;
             .open-sans-light;
-            font-size: 14px;
+            font-size: @baseFontSize;
             text-align: right;
 
             cite:before {
@@ -966,7 +966,7 @@ html[dir="rtl"] {
         }
 
         p {
-            font-size: 14px;
+            font-size: @baseFontSize;
         }
     }
 
