--- a/media/css/mozorg/partnerships.less
+++ b/media/css/mozorg/partnerships.less
@@ -94,7 +94,7 @@
 
     #sf-form label.error {
         .open-sans;
-        font-size: 12px;
+        font-size: @smallFontSize;
         color: rgb(175,50,50);
         font-weight: bold;
         text-transform: uppercase;
