--- a/media/css/mozorg/products.less
+++ b/media/css/mozorg/products.less
@@ -139,7 +139,7 @@
             font-size: 38px;
         }
         h2 {
-            font-size: 16px;
+            font-size: @largeFontSize;
             width: auto;
             letter-spacing: normal;
         }
@@ -170,7 +170,7 @@
                 margin-bottom: 0;
             }
             p {
-                font-size: 12px;
+                font-size: @smallFontSize;
             }
         }
         img {
