--- a/media/css/mozorg/projects/calendar.less
+++ b/media/css/mozorg/projects/calendar.less
@@ -123,7 +123,7 @@
                 font-size: 20px;
             }
             span.desc {
-                font-size: 16px;
+                font-size: @largeFontSize;
             }
         }
         a {
@@ -184,10 +184,10 @@
             .itemtext {
                 width: 60%;
                 a.title {
-                    font-size: 14px;
+                    font-size: @baseFontSize;
                 }
                 span.desc {
-                    font-size: 12px;
+                    font-size: @smallFontSize;
                 }
             }
         }
