--- a/media/css/sandstone/buttons.less
+++ b/media/css/sandstone/buttons.less
@@ -286,7 +286,7 @@
     text-align: left;
     font-weight: normal;
     line-height: @baseLine;
-    font-size: 16px;
+    font-size: @largeFontSize;
     .border-radius(6px);
     .download-content {
         display: block;
@@ -626,7 +626,7 @@
        .download-title {
             padding-top: 0;
             margin-bottom: 5px;
-            font-size: 16px;
+            font-size: @largeFontSize;
             color: #346012;
             text-shadow: 0 1px rgba(255, 255, 255, 0.2);
         }
