--- a/media/css/sandstone/sandstone-resp.less
+++ b/media/css/sandstone/sandstone-resp.less
@@ -226,16 +226,16 @@ h4, legend {
 }
 
 h5 {
-    font-size: 16px;
+    font-size: @largeFontSize;
 }
 
 h6 {
-    font-size: 14px;
+    font-size: @baseFontSize;
 }
 
 .small,
 small {
-    font-size: 12px;
+    font-size: @smallFontSize;
     line-height: 16px;
 }
 
@@ -297,7 +297,7 @@ dl.faq dd {
 pre,
 code {
     color: @textColorTertiary;
-    font-size: 14px;
+    font-size: @baseFontSize;
 }
 
 .center {
@@ -786,7 +786,7 @@ nav.menu-bar {
         td {
             border-top: 0;
             padding-top: 0;
-            font-size: 16px;
+            font-size: @largeFontSize;
             .open-sans-light;
         }
     }
@@ -806,7 +806,7 @@ nav.menu-bar {
     nav,
     .nav {
         .open-sans-light;
-        font-size: 16px;
+        font-size: @largeFontSize;
         color: @textColorSecondary;
 
         li {
@@ -1280,11 +1280,11 @@ nav.menu-bar {
     }
 
     h4 {
-        font-size: 16px;
+        font-size: @largeFontSize;
     }
 
     h5 {
-        font-size: 14px;
+        font-size: @baseFontSize;
     }
 
     dl dt {
