--- a/media/css/sandstone/sandstone.less
+++ b/media/css/sandstone/sandstone.less
@@ -223,16 +223,16 @@ h4 {
 }
 
 h5 {
-    font-size: 16px;
+    font-size: @largeFontSize;
 }
 
 h6 {
-    font-size: 14px;
+    font-size: @baseFontSize;
 }
 
 .small,
 small {
-    font-size: 12px;
+    font-size: @smallFontSize;
     line-height: 16px;
 }
 
@@ -268,7 +268,7 @@ dl dd {
 
 code {
     color: @textColorTertiary;
-    font-size: 14px;
+    font-size: @baseFontSize;
 }
 
 .center {
@@ -545,7 +545,7 @@ nav.menu-bar {
     nav,
     .nav {
         .open-sans-light;
-        font-size: 16px;
+        font-size: @largeFontSize;
         color: @textColorSecondary;
 
         li {
@@ -704,7 +704,7 @@ nav.menu-bar {
 #colophon {
     color: @textColorTertiary;
     padding: 48px 0;
-    font-size: 14px;
+    font-size: @baseFontSize;
     line-height: 18px;
     background: #fff;
     width: 100%;
