--- a/media/css/styleguide/styleguide.less
+++ b/media/css/styleguide/styleguide.less
@@ -145,7 +145,7 @@ a[href="#TODO"] { color: #f00 !important; }
     nav {
         text-transform: uppercase;
         .open-sans-light;
-        font-size: 12px;
+        font-size: @smallFontSize;
         margin: @baseLine auto;
         width: 160px;
         ul {
@@ -362,7 +362,7 @@ body.dark {
         margin-bottom: @baseLine / 2;
     }
     td,tr {
-        font-size: 12px;
+        font-size: @smallFontSize;
     }
     td {
         padding-right: 20px;
