--- a/media/css/facebookapps/downloadtab.less
+++ b/media/css/facebookapps/downloadtab.less
@@ -123,7 +123,7 @@ h2 {
     margin: 0 auto;
     width: 560px;
 
-    font-size: 16px;
+    font-size: @largeFontSize;
 }
 
 // Steps progress bar
@@ -269,7 +269,7 @@ h2 {
         padding: 0;
         width: 175px;
         color: @textColorTertiary;
-        font-size: 12px;
+        font-size: @smallFontSize;
         text-align: left;
 
         &:after {
@@ -414,7 +414,7 @@ h2 {
     }
     p {
         margin: 0;
-        font-size: 14px;
+        font-size: @baseFontSize;
     }
 
     .button,
