--- a/media/css/firefox/all.less
+++ b/media/css/firefox/all.less
@@ -130,7 +130,7 @@
     top: 3px;
     right: 24px;
     z-index: 2;
-    font-size: 16px;
+    font-size: @largeFontSize;
     .clearfix();
 
     .pager-tabs, .pager-title {
