--- a/media/css/firefox/independent-splash.less
+++ b/media/css/firefox/independent-splash.less
@@ -112,7 +112,7 @@
         border: 0;
         color: #fff;
         font-weight: bold;
-        font-size: 16px;
+        font-size: @largeFontSize;
         letter-spacing: -0.05em;
         text-transform: uppercase;
         text-decoration: none;
@@ -158,7 +158,7 @@
             margin-bottom: 24px;
 
             &:before {
-                font-size: 16px;
+                font-size: @largeFontSize;
             }
         }
 
