--- a/media/css/firefox/mobile-sms.less
+++ b/media/css/firefox/mobile-sms.less
@@ -91,7 +91,7 @@
 .tooltip {
     display: block;
     color: #fff;
-    font-size: 14px;
+    font-size: @baseFontSize;
     font-weight: bold;
     text-shadow: 0 1px #333;
     line-height: 1.2;
