--- a/media/css/firefox/mwc-2014-schedule.less
+++ b/media/css/firefox/mwc-2014-schedule.less
@@ -6,7 +6,7 @@
   float: left;
   width: 45%;
   display: block;
-  font-size: 16px;
+  font-size: @largeFontSize;
   .open-sans-light;
   margin-bottom: @baseLine / 2;
   font-style: italic;
@@ -51,7 +51,7 @@
 
     span {
       display: block;
-      font-size: 12px;
+      font-size: @smallFontSize;
       .open-sans;
       color: #8d8d8d;
       text-transform: uppercase;
@@ -68,7 +68,7 @@
     margin: 0;
     padding: 0 @baseLine 14px;
     list-style-type: none;
-    font-size: 14px;
+    font-size: @baseFontSize;
     line-height: 18px;
     .open-sans-light;
     color: @textColorSecondary;
@@ -76,13 +76,13 @@
 
   .timeframe {
     margin-top: 4px;
-    font-size: 12px;
+    font-size: @smallFontSize;
     background: url(/media/img/firefox/os/mwc-2014-preview/sprite-icons.png) left -85px no-repeat;
     padding-left: @baseLine;
   }
 
   small {
-    font-size: 12px;
+    font-size: @smallFontSize;
     display: block;
     margin-top: @baseLine / 2;
   }
