--- a/media/css/firefox/releasenotes.less
+++ b/media/css/firefox/releasenotes.less
@@ -119,7 +119,7 @@
         display: block;
         padding: 12px 16px;
         .open-sans;
-        font-size: 12px;
+        font-size: @smallFontSize;
         font-weight: 600;
         text-transform: uppercase;
         border-radius: 0 6px 6px 0;
@@ -198,7 +198,7 @@ article {
     }
 
     .note {
-        font-size: 12px;
+        font-size: @smallFontSize;
         color: @textColorSecondary;
         margin: 0 0 .25em;
     }
