--- a/media/css/foundation/annual2013.less
+++ b/media/css/foundation/annual2013.less
@@ -346,7 +346,7 @@ html[dir="rtl"] {
         li {
             width: 220px;
             a {
-                font-size: 16px;
+                font-size: @largeFontSize;
             }
         }
     }
@@ -486,7 +486,7 @@ html[dir="rtl"] {
         li {
             width: 300px;
             a {
-                font-size: 16px;
+                font-size: @largeFontSize;
             }
         }
     }
