--- a/media/css/grants/grants.less
+++ b/media/css/grants/grants.less
@@ -15,7 +15,7 @@
 }
 
 .meta {
-    font-size: 16px;
+    font-size: @largeFontSize;
     font-family: Georgia;
     line-height: 24px;
     letter-spacing: 0;
@@ -91,7 +91,7 @@
     }
     h2, h3 {
         display: inline-block;
-        font-size: 16px;
+        font-size: @largeFontSize;
         margin-bottom: 0;
         margin-right: 5px;
         font-weight: normal;
