--- a/media/css/mozorg/home/home-promo.less
+++ b/media/css/mozorg/home/home-promo.less
@@ -275,7 +275,7 @@
         margin: 0 @baseLine;
         padding: (@baseLine / 2) @baseLine;
         color: #fff;
-        font-size: 14px;
+        font-size: @baseFontSize;
         text-transform: uppercase;
         border: 2px solid rgba(255, 255, 255, 0.5);
         border-radius: 7px;
@@ -553,7 +553,7 @@ html[lang|="en"] {
             }
 
             .download-subtitle {
-                font-size: 14px;
+                font-size: @baseFontSize;
                 margin: 0;
                 text-align: center;
                 text-shadow: none;
@@ -686,7 +686,7 @@ html[lang|="en"] {
             font-size: 18px;
         }
         .secondary .os_android .download-link .download-subtitle {
-            font-size: 14px;
+            font-size: @baseFontSize;
         }
     }
 }
