--- a/media/css/plugincheck/plugincheck.less
+++ b/media/css/plugincheck/plugincheck.less
@@ -93,7 +93,7 @@
     }
     small {
         display: block;
-        font-size: 12px;
+        font-size: @smallFontSize;
     }
     .plugin-status-detail {
         width: 60%;
