--- a/media/css/tabzilla/tabzilla.less
+++ b/media/css/tabzilla/tabzilla.less
@@ -287,7 +287,7 @@ html[dir='rtl'] #tabzilla {
     -moz-transition: all .2s linear;
     -webkit-transition: all .2s linear;
     transition: all .2s linear;
-    font-size: 12px;
+    font-size: @smallFontSize;
     line-height: normal;
 }
 
@@ -321,7 +321,7 @@ html[dir='rtl'] #tabzilla {
     overflow: hidden;
     margin: 0 auto;
     width: 940px;
-    font-size: 12px;
+    font-size: @smallFontSize;
     line-height: 1.5;
 
     div {
@@ -397,7 +397,7 @@ html[dir='rtl'] #tabzilla {
     background-position: 0 0;
     background-color: #226aa7;
     color: #fff;
-    font-size: 12px;
+    font-size: @smallFontSize;
     padding: 20px 80px 20px 20px;
     height: 170px;
     line-height: 20px;
@@ -484,7 +484,7 @@ html[lang="km"] {
     background-image: url("/media/img/tabzilla/promo-webwewant.jpg");
     background-position: 0 0;
     text-shadow: 0 0 2px #000;
-    font-size: 12px;
+    font-size: @smallFontSize;
     line-height: 20px;
     h4 {
         margin-bottom: 10px;
@@ -576,7 +576,7 @@ html[lang="mr"] {
 
 html[lang="kk"] {
     #tabzilla-promo .snippet#tabzilla-promo-webwewant a p {
-        font-size: 16px;
+        font-size: @largeFontSize;
     }
 }
 
