--- a/media/css/base/mozilla-modal.less
+++ b/media/css/base/mozilla-modal.less
@@ -138,7 +138,7 @@ html[dir="rtl"] {
         .inner header {
             // remove left/right padding so the .image-replaced works as expected
             padding: 10px 0;
-            .image-replaced;
+            .image-replaced();
         }
     }
 }
