--- a/media/css/firefox/all.less
+++ b/media/css/firefox/all.less
@@ -1,4 +1,4 @@
-@import "template-resp.less";
+@import "../sandstone/lib.less";
 
 .build-table-container {
     .hide {
@@ -28,7 +28,6 @@
 }
 
 #language-search {
-    .billboard();
     padding-top: @baseLine;
     padding-bottom: @baseLine;
     margin-left: @gridGutterWidth * 1.5;
@@ -74,7 +73,6 @@
         margin-top: @baseLine * 2;
     }
     table {
-        .table;
         width: 100%;
         thead {
             th {
