--- a/media/css/firefox/desktop/tips.less
+++ b/media/css/firefox/desktop/tips.less
@@ -362,6 +362,7 @@ html[lang^='en'] #tips-nav-direct li a span:after {
 
         button {
             .transition(color .2s ease);
+            .link-button();
         }
 
         button:disabled {
