--- a/media/css/firefox/whatsnew-fxos.less
+++ b/media/css/firefox/whatsnew-fxos.less
@@ -2,8 +2,7 @@
 // License, v. 2.0. If a copy of the MPL was not distributed with this
 // file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-@import "template.less";
-@import "simple_footer.less";
+@import "../sandstone/lib.less";
 
 @wrapper_width: 992px;
 
@@ -59,7 +58,7 @@
     margin: 0 auto;
     padding-top: 0;
     padding-bottom: 0;
-    
+
     .billboard {
         background: #fafafa;
         border: 1px solid #efefef;
