--- a/media/css/foundation/annual2013.less
+++ b/media/css/foundation/annual2013.less
@@ -139,7 +139,7 @@ body {
             background-repeat: no-repeat;
             // hide descriptive link text
             span {
-                .visually-hidden;
+                .visually-hidden();
             }
             &:hover, &:focus {
                 background-color: rgba(0, 0, 0, 0.25);
@@ -210,7 +210,7 @@ dl.faq dt {
 
 html[lang|="en"] {
     .banner h1 span {
-        .image-replaced;
+        .image-replaced();
         display: block;
         border-radius: 0;
         background: url(/media/img/foundation/annualreport/2013/state-of-mozilla.png) left top no-repeat;
