--- a/media/css/legal/legal.less
+++ b/media/css/legal/legal.less
@@ -2,7 +2,7 @@
 // License, v. 2.0. If a copy of the MPL was not distributed with this
 // file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-@import "../sandstone/sandstone-resp.less";
+@import "../sandstone/lib.less";
 
 #outer-wrapper {
     overflow: hidden; /* Fix the layout on IE */
@@ -33,9 +33,9 @@
     th {
       text-align: left;
       font-weight: normal;
-    } 
+    }
   }
-  
+
   #other {
     clear: both;
   }
@@ -139,7 +139,7 @@
                 display: none;
             }
         }
-    }    
+    }
 }
 
 
