--- a/media/css/mozorg/contact-spaces.less
+++ b/media/css/mozorg/contact-spaces.less
@@ -375,7 +375,7 @@
             text-shadow: none;
 
             span {
-                .visually-hidden;
+                .visually-hidden();
             }
         }
 
