--- a/media/css/mozorg/contribute/contribute-2015.less
+++ b/media/css/mozorg/contribute/contribute-2015.less
@@ -276,7 +276,7 @@ textarea:focus {
     }
 
     label {
-        .visually-hidden;
+        .visually-hidden();
     }
 
     .select select {
@@ -285,7 +285,7 @@ textarea:focus {
 }
 
 .js .country-form button {
-    .visually-hidden;
+    .visually-hidden();
 }
 
 // @Navigation
@@ -977,7 +977,7 @@ textarea:focus {
         border-radius: 6px;
 
         .section-title {
-            .visually-hidden;
+            .visually-hidden();
         }
 
         label {
@@ -1123,7 +1123,7 @@ textarea:focus {
     }
 
     input {
-        .visually-hidden;
+        .visually-hidden();
     }
 
     label {
@@ -1679,7 +1679,7 @@ textarea:focus {
         width: 55px;
         height: 55px;
         display: block;
-        .image-replaced;
+        .image-replaced();
         border: 2px solid @darkbeige;
         border-radius: 100%;
         position: relative;
