--- a/media/css/mozorg/contribute/contribute-old.less
+++ b/media/css/mozorg/contribute/contribute-old.less
@@ -3,7 +3,6 @@
 // file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
 @import "../../sandstone/lib.less";
-@import "contribute-form.less";
 
 .page-title {
     text-align: center;
@@ -84,7 +83,7 @@ header {
     }
 
     figcaption {
-        .visually-hidden;
+        .visually-hidden();
     }
 
     // Control buttons
