--- a/media/css/mozorg/contribute/studentambassadors/landing.less
+++ b/media/css/mozorg/contribute/studentambassadors/landing.less
@@ -165,7 +165,7 @@
     .multi-column(auto, 2, 20px);
 
     article {
-      .multi-column-avoid-break;
+      .multi-column-avoid-break();
     }
   }
 }
@@ -232,7 +232,7 @@
 
   #twitter-timeline-widget {
     .tweets {
-      .multi-column-clear;
+      .multi-column-clear();
     }
   }
 }
