--- a/media/css/firefox/android.less
+++ b/media/css/firefox/android.less
@@ -2,8 +2,7 @@
 // License, v. 2.0. If a copy of the MPL was not distributed with this
 // file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-@import '../sandstone/sandstone-resp.less';
-@import 'menu-resp.less';
+@import '../sandstone/lib.less';
 
 // Base template overrides
 
