--- a/media/css/firefox/new.less
+++ b/media/css/firefox/new.less
@@ -2,8 +2,7 @@
 // License, v. 2.0. If a copy of the MPL was not distributed with this
 // file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-@import "template-resp.less";
-@import "simple_footer-resp.less";
+@import "../sandstone/lib.less";
 
 .sky #outer-wrapper {
     background: #eaeff2;
