--- a/media/css/foundation/annual2012.less
+++ b/media/css/foundation/annual2012.less
@@ -168,7 +168,7 @@ body {
 			background-repeat: no-repeat;
 			// hide descriptive link text
 			span {
-				.visually-hidden;
+				.visually-hidden();
 			}
 			&:hover, &:focus {
 				background-color: rgba(0, 0, 0, 0.25);
@@ -260,7 +260,7 @@ dl.faq dt {
 
 html[lang|="en"] {
 	.banner h1 span {
-		.image-replaced;
+		.image-replaced();
 		display: block;
 		border-radius: 0;
 		background: url(/media/img/foundation/annualreport/2012/state-of-mozilla.png) left top no-repeat;
