--- a/media/css/legal/fraud-report.less
+++ b/media/css/legal/fraud-report.less
@@ -2,10 +2,10 @@
 // License, v. 2.0. If a copy of the MPL was not distributed with this
 // file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-@import "../sandstone/sandstone-resp.less";
+@import "../sandstone/lib.less";
 
 #main-content {
-    .callout-content;
+    .callout-content();
     margin-top: 100px;
 }
 
@@ -34,7 +34,7 @@
     margin-top: @baseLine;
 
     label.error {
-        .visually-hidden;
+        .visually-hidden();
     }
 
     textarea {
