--- a/media/css/mozorg/home/home-promo.less
+++ b/media/css/mozorg/home/home-promo.less
@@ -427,7 +427,7 @@ html[lang|="en"] {
         height: 130px;
         border: 5px solid transparent;
         .transition(border .3s ease-in-out);
-        .image-replaced;
+        .image-replaced();
         cursor: pointer;
 
         &:hover,
