--- a/media/css/press/speaker-request.less
+++ b/media/css/press/speaker-request.less
@@ -2,7 +2,7 @@
 // License, v. 2.0. If a copy of the MPL was not distributed with this
 // file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-@import "../sandstone/sandstone-resp.less";
+@import "../sandstone/lib.less";
 
 #main-content {
     .callout-content;
@@ -80,7 +80,7 @@ fieldset {
     margin-top: @baseLine;
 
     label.error {
-        .visually-hidden;
+        .visually-hidden();
     }
 
     textarea {
