--- a/media/css/styleguide/communications.less
+++ b/media/css/styleguide/communications.less
@@ -2,7 +2,8 @@
 // License, v. 2.0. If a copy of the MPL was not distributed with this
 // file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-@import "../styleguide/styleguide.less";
+@import "styleguide-lib.less";
+
 /* {{{ Communications - Presentations */
 
 .communications-presentations {
