--- a/media/css/styleguide/products-firefox.less
+++ b/media/css/styleguide/products-firefox.less
@@ -1,4 +1,4 @@
-@import "../styleguide/styleguide.less";
+@import "styleguide-lib.less";
 
 /* {{{ Firefox Desktop for Windows 7 (sample dark theme page) */
 
