--- a/media/css/styleguide/styleguide.less
+++ b/media/css/styleguide/styleguide.less
@@ -2,8 +2,7 @@
 // License, v. 2.0. If a copy of the MPL was not distributed with this
 // file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-@import "../sandstone/fonts.less";
-@import "../sandstone/lib.less";
+@import "styleguide-lib.less";
 
 @font-face {
     font-family: 'Open Sans';
@@ -27,55 +26,12 @@
     font-style: italic;
 }
 
-@darkThemeText: #9a9ea1;
-
-.divider() {
-    padding-bottom: @baseLine * 3;
-    margin-bottom: @baseLine * 2;
-    background: url(/media/img/styleguide/divider.png) 50% 100% no-repeat;
-}
-
-.divider-dark() {
-    .divider();
-    background-image: url(/media/img/styleguide/divider-dark.png);
-}
-
 a[href="#TODO"] { color: #f00 !important; }
 
 .copyright-note {
   clear: both;
   padding-top: 20px;
   .offset(3);
-}
-
-/* {{{ Grid setup */
-
-// Desktop:
-//           (16cols ✕ 60px) =  960
-// +     (15 gutters ✕ 20px) =  300
-// + (2 page gutters ✕ 20px) =   40
-// --------------------------------
-//                           = 1300px
-
-@widthDesktop:            1300px;
-
-// Gutter width remains the same for all grids
-@gridGutterWidth:         20px;
-
-// Default grid: 12 columns at 60px
-@gridColumns:             16;
-@gridColumnWidth:         60px;
-@gridRowWidth:            (@gridColumns * @gridColumnWidth) + (@gridGutterWidth * (@gridColumns - 1));
-
-// Column spans for style guide column widths
-.span_guide(@columns) {
-    float: left;
-    width: (@gridColumnWidth * @columns) + (@gridGutterWidth * (@columns - 1));
-    margin: 0 (@gridGutterWidth / 2);
-}
-
-.offset_guide(@columns) {
-    margin-left: ((@gridColumnWidth + @gridGutterWidth) * @columns) + (@gridGutterWidth * 0.5);
 }
 
 #outer-wrapper {
