--- a/bedrock/newsletter/templates/newsletter/existing.html
+++ b/bedrock/newsletter/templates/newsletter/existing.html
@@ -11,7 +11,11 @@
 
   {% block main_feature %}
     <div id="main-feature">
-      <h1>{{ _('Manage your <span>Newsletter Subscriptions</span>') }}</h1>
+      <h1>{{ _('Manage your Email Preferences') }}</h1>
+      <p>
+        {{ _('We love sharing updates about all the awesome things happening at Mozilla.') }}<br>
+        {{ _('Set your preferences below to make sure you always receive the news you want.') }}
+      </p>
     </div>
   {% endblock %}
 
@@ -64,7 +68,8 @@
         </div>
       </div><!-- close #basic-settings -->
 
-      <div class="field" id="other-newsletters">
+      <div class="field" id="default-newsletters">
+        <h2>{{ _('Newsletters') }}</h2>
         <div class="field-radios">
         <table class="table">
           <thead>
@@ -76,6 +81,8 @@
           </thead>
           <tbody>
           {% for formpart in formset %}  {# each newsletter is a formset #}
+            {% if formpart.initial['newsletter'] not in settings.OTHER_NEWSLETTERS and
+                  formpart.initial['newsletter'] not in settings.MARKETPLACE_NEWSLETTERS %}
             <tr class="subscription">
               <th>
                 <h4 class="title">
@@ -92,13 +99,71 @@
                   {{ formpart.initial['description'] }}
                 </p>
               </th>
-              {{ formpart.subscribed }}
+              {{ formpart.subscribed_radio }}
             </tr>
+            {% endif %}
           {% endfor %}
           </tbody>
         </table>
         </div>
-      </div><!-- close #all-newsletters -->
+      </div><!-- close #default-newsletters -->
+
+      <div class="field" id="other-newsletters">
+        <h3>{{ _('Getting too much email from us?') }}</h3>
+        <p>
+          {{ _('Not interested in our newsletters, but like those special announcements? No problem.') }}
+          {{ _('We can keep in touch with occasional messages that matter most to you.') }}
+        </p>
+        <p>{{ _('Check all categories that apply to you, and we promise to keep the mail to a minimum.') }}</p>
+        <div class="field-radios">
+        <table class="table">
+          <thead>
+          <tr>
+            <th colspan="2"></th>
+            <th>{{ _('I’m interested in:') }}</th>
+          </tr>
+          </thead>
+          <tbody>
+          {% set marketplace_first = True %}
+          {% for formpart in formset %}  {# each newsletter is a formset #}
+            {% if formpart.initial['newsletter'] in settings.OTHER_NEWSLETTERS %}
+            <tr class="subscription">
+              <th colspan="2">
+                <h4 class="title">
+                  {{ formpart.initial['title'] }}
+                  {% if formpart.initial['english_only'] %}
+                    <span class="en-only">({{ _('English&nbsp;only') }})</span>
+                  {% endif %}
+                </h4>
+                {{ formpart.newsletter }}
+                <p class="description">
+                  {{ formpart.initial['description'] }}
+                </p>
+              </th>
+              {{ formpart.subscribed_check }}
+            </tr>
+            {% endif %}
+            {% if formpart.initial['newsletter'] in settings.MARKETPLACE_NEWSLETTERS %}
+            <tr class="subscription">
+              {% if marketplace_first %}
+              <th rowspan="3">
+                <h4 class="title">{{ _('Firefox Marketplace') }}</h4>
+                <p class="description">{{ _('Know when the coolest apps hit the Marketplace for your platform:') }}</p>
+              </th>
+              {% set marketplace_first = False %}
+              {% endif %}
+              <th class="subcategory">
+                {{ formpart.initial['title'] }}
+                {{ formpart.newsletter }}
+              </th>
+              {{ formpart.subscribed_check }}
+            </tr>
+            {% endif %}
+          {% endfor %}
+          </tbody>
+        </table>
+        </div>
+      </div><!-- close #other-newsletters -->
 
       <div class="field" id="remove-all-section">
         {{ form['remove_all'] }}
