--- a/media/css/newsletter/newsletter.less
+++ b/media/css/newsletter/newsletter.less
@@ -6,14 +6,9 @@
 
 #main-feature {
     text-align: center;
-    h1 {
-        line-height: 1.1;
-        margin: 0;
+    p {
+        margin: 1em auto 0;
     }
-}
-
-#newsletter-existing #main-feature h1 span {
-    display: block;
 }
 
 #existing-newsletter-form {
@@ -22,20 +17,16 @@
         padding-bottom: @baseLine;
         label,
         .field-label {
-            .span(3);
             .open-sans-light;
             .font-size(@largeFontSize);
-            text-align: right;
         }
         .field-contents {
-            .span(6);
             label {
                 float: none;
                 width: auto;
                 margin: auto;
                 font-family: inherit;
                 .font-size(@baseFontSize);
-                text-align: left;
             }
             input[type="email"],
             select {
@@ -61,21 +52,36 @@
             .span(3);
         }
     }
+    h2 {
+        .font-size(32px);
+        letter-spacing: -.5px;
+    }
     h3 {
-        .font-size(24px);
+        .font-size(32px);
+        line-height: 1.3;
     }
     h3.field-label {
         letter-spacing: normal;
         font-family: inherit;
     }
+    #basic-settings {
+        .span(4);
+    }
+    #default-newsletters,
+    #other-newsletters,
+    #remove-all-section,
+    .submit-field {
+        .span(7);
+        float: right;
+    }
     #other-newsletters {
-        .span(6);
-        .offset(3);
+        margin-top: @baseLine;
+        padding: @baseLine*2 0;
+        background: url('/media/img/newsletter/divider.png') no-repeat top center;
     }
     #remove-all-section {
-        .span(6);
-        .offset(3);
         label {
+            display: inline;
             float: none;
             width: auto;
             margin: auto;
@@ -89,13 +95,22 @@
         }
     }
     .table {
+        margin-bottom: 0;
         width: 100%;
         thead th {
+            padding: 0 10px 10px;
+            color: @textColorTertiary;
+            .open-sans;
+            font-size: @smallFontSize;
             text-align: center;
+            white-space: nowrap;
         }
         tbody {
             th {
+                padding: 15px 15px 15px 0;
+                font-weight: normal;
                 text-align: left;
+                vertical-align: top;
                 h4 {
                     margin: 0 0 5px 0;
                     .font-size(22px);
@@ -107,19 +122,18 @@
                 .description {
                     margin: 0.2em 0 0 0;
                     color: @textColorTertiary;
-                    font-weight: normal;
                     .font-size(@smallFontSize);
                     line-height: 1.3;
                 }
+                &.subcategory {
+                    white-space: nowrap;
+                }
             }
             td {
+                padding-right: 0;
                 text-align: center;
             }
         }
-    }
-    .submit-field {
-        .span(6);
-        .offset(3);
     }
 }
 
@@ -225,20 +239,14 @@
 @media only screen and (min-width: @widthTablet) and (max-width: @widthDesktop) {
 
     #existing-newsletter-form {
-        .field {
-            label,
-            .field-label {
-                .span_narrow(3);
-            }
-            .field-contents {
-                .span_narrow(6);
-            }
-        }
+        #basic-settings,
+        #default-newsletters,
         #other-newsletters,
         #remove-all-section,
         .submit-field {
-            .span_narrow(6);
-            .offset_narrow(3);
+            .span_narrow(9);
+            float: none;
+            margin: 0 auto @baseLine;
         }
     }
 
@@ -302,19 +310,19 @@
     }
 
     #existing-newsletter-form {
-        .field {
-            label,
-            .field-label {
-                .span-all();
-            }
-            .field-contents {
-                .span-all();
-            }
-        }
+        #basic-settings,
+        #default-newsletters,
         #other-newsletters,
         #remove-all-section,
         .submit-field {
             .span-all();
+        }
+        #other-newsletters {
+            padding: @baseLine 0;
+            background-size: contain;
+            .table thead th {
+                display: none;
+            }
         }
     }
 
