Bug 1090468: Move transition.txt to original url.

--- a/bedrock/security/templates/security/index.html
+++ b/bedrock/security/templates/security/index.html
@@ -154,7 +154,7 @@
 
       <p id="pgpkey">The PGP key for security@mozilla.org below can be used to send encrypted mail
         or to verify responses received from that address. We changed keys on October 23, 2014.
-        Please see our signed <a href="/media/security/transition.txt">transition statement</a> for confirmation.</p>
+        Please see our signed <a href="/security/transition.txt">transition statement</a> for confirmation.</p>
 
 <pre class="pgp-key">
 -----BEGIN PGP PUBLIC KEY BLOCK-----
