Bug 1109207 - One Touch Fire C available in Montenegro

--- a/bedrock/firefox/templates/firefox/os/_get_device.html
+++ b/bedrock/firefox/templates/firefox/os/_get_device.html
@@ -142,7 +142,8 @@
         <div class="provider" data-country="me">
           <h3>{{_('Montenegro')}}</h3>
           <ul>
-            <li><a class="telenor" href="http://www.telenor.me/sr/Privatni-korisnici/Uredjaji/Mobilni-telefoni/Alcatel/OT_Fire">Telenor</a></li>
+            <li><a class="telenor" href="http://www.telenor.me/sr/Privatni-korisnici/Uredjaji/Mobilni-telefoni/Alcatel/OT_Fire">Alcatel One Touch Fire</a></li>
+            <li><a class="t-mobile" href="http://www.telekom.me/product-details-updated.nspx?phoneid=673&amp;userType=2">Alcatel One Touch Fire C</a></li>
           </ul>
         </div>
         <div class="provider" data-country="mk">
