--- a/bedrock/firefox/templates/firefox/os/devices.html
+++ b/bedrock/firefox/templates/firefox/os/devices.html
@@ -899,6 +899,7 @@
                     <li>{{ _('Greece') }}</li>
                     <li>{{ _('Macedonia') }}</li>
                     <li>{{ _('Mexico') }}</li>
+                    <li>{{ _('Montenegro') }}</li>
                     <li>{{ _('Peru') }}</li>
                     <li>{{ _('Spain') }}</li>
                     <li>{{ _('Uruguay') }}</li>
