Fix Bug 1102594 - Replace Firefox browser screenshots showing search box

--- a/bedrock/firefox/templates/firefox/developer.html
+++ b/bedrock/firefox/templates/firefox/developer.html
@@ -40,7 +40,7 @@
   </p>
   {% endif %}
 
-  <img src="{{ media('img/firefox/developer/screenshot.jpg') }}" alt="{{ _('Firefox Developer Edition') }}" class="screenshot" />
+  <img src="{{ media('img/firefox/developer/screenshot.jpg?2014-12') }}" alt="{{ _('Firefox Developer Edition') }}" class="screenshot" />
 
   <ul class="intro-features">
     <li class="intro-feature">
@@ -104,7 +104,7 @@
       </li>
       <li class="feature">
         <a href="https://www.youtube.com/watch?v=R_qDaLQ8ghg" class="video-play" rel="external">
-          <img src="{{ media('/img/firefox/developer/feature-webaudio.jpg') }}" alt="{{ _('Screenshot') }}" class="screenshot">
+          <img src="{{ media('/img/firefox/developer/feature-webaudio.jpg?2014-12') }}" alt="{{ _('Screenshot') }}" class="screenshot">
         </a>
         <h2>{{_('Web Audio Editor')}}</h2>
         <p>{{_('Inspect and interact with Web Audio API in real time to ensure that all audio nodes are connected in the way you expect.')}}</p>
