--- a/bedrock/firefox/templates/firefox/dev-firstrun.html
+++ b/bedrock/firefox/templates/firefox/dev-firstrun.html
@@ -152,7 +152,7 @@ data-sync-icon-high-res="{{ MEDIA_URL }}img/firefox/dev-firstrun/sync-blue-high-
         </li>
         <li class="feature">
           <a href="https://www.youtube.com/watch?v=R_qDaLQ8ghg" rel="external" class="video-play">
-            <img src="{{ media('/img/firefox/firstrun/dev/feature-webaudio.jpg') }}" alt="{{ _('Screenshot') }}" class="screenshot">
+            <img src="{{ media('/img/firefox/firstrun/dev/feature-webaudio.jpg?2014-12') }}" alt="{{ _('Screenshot') }}" class="screenshot">
           </a>
           <h2>{{_('Web Audio Editor')}}</h2>
           <p>{{_('Inspect and interact with Web Audio API in real time to ensure that all audio nodes are connected in the way you expect.')}}</p>
