Fix Bug 1073555 - Show an unsupported message to Windows RT users

--- a/media/css/firefox/new.less
+++ b/media/css/firefox/new.less
@@ -99,6 +99,7 @@
 }
 
 /* Unsupported platforms */
+html.windows.arm,
 html.oldmac,
 html.oldwin {
     .download-button .unsupported-download {
@@ -620,6 +621,7 @@ html[dir="rtl"] {
         padding: 0;
     }
 
+    html.windows.arm,
     html.oldmac,
     html.oldwin {
         .download-button .unsupported-download {
