--- a/media/css/sandstone/buttons.less
+++ b/media/css/sandstone/buttons.less
@@ -531,6 +531,7 @@
 
 .download-button .os_linux,
 .download-button .os_linux64,
+.windows.arm .download-button .os_windows,
 .linux.arm .download-button .os_linux,
 .linux.x86.x64 .download-list .os_linux,
 .download-button .os_windows,
@@ -555,6 +556,7 @@
     display: block !important;
 }
 
+.windows.arm .download-button .unsupported-download,
 .linux.arm .download-button .linux-arm-download,
 .ios .download-button .unsupported-download,
 .oldwin .download-button .unsupported-download,
