Update Alcatel OTF C purchase URL for Costa Rica. Bug 1107572.

--- a/bedrock/firefox/templates/firefox/os/_get_device.html
+++ b/bedrock/firefox/templates/firefox/os/_get_device.html
@@ -51,7 +51,7 @@
         <div class="provider" data-country="cr">
           <h3>{{ _('Costa Rica') }}</h3>
           <ul>
-            <li><a class="movistar" href="http://movistar.cr/personas/c-movistar-plus/?id=8356">Alcatel One Touch Fire C</a></li>
+            <li><a class="movistar" href="http://movistar.cr/tienda/Marcas/Alcatel/ALCATEL-FIRE-C/p/4ALCATEL_FIRE_C">Alcatel One Touch Fire C</a></li>
           </ul>
         </div>
         <div class="provider" data-country="cz">
