--- a/media/css/sandstone/sandstone-resp.less
+++ b/media/css/sandstone/sandstone-resp.less
@@ -447,7 +447,7 @@ input.invalid {
     }
 }
 
-input[type=email], input[type=password], input[type=text] {
+input[type=email], input[type=password], input[type=text], textarea {
     &.error {
         .form-field-error();
     }
