[fix bug 1111656] Override tabzilla update notification on /plugincheck

--- a/bedrock/mozorg/templates/mozorg/plugincheck.html
+++ b/bedrock/mozorg/templates/mozorg/plugincheck.html
@@ -12,6 +12,9 @@
   {{ css('plugincheck') }}
 {% endblock %}
 
+{#- Override the infobar options not to run the version check Bug 1111656 -#}
+{% block tabzilla_infobar %}translation{% endblock %}
+
 {% block body_class %}sky{% endblock %}
 
 {% block string_data %}
