Update Rust GitHub link

--- a/bedrock/research/templates/research/projects.html
+++ b/bedrock/research/templates/research/projects.html
@@ -38,7 +38,7 @@
     <h2>{{_('Rust')}}</h2>
     <ul>
       <li><a href="http://www.rust-lang.org">{{_('Rust website')}}</a></li>
-      <li><a href="https://github.com/mozilla/rust">{{_('Rust on GitHub')}}</a></li>
+      <li><a href="https://github.com/rust-lang/rust">{{_('Rust on GitHub')}}</a></li>
     </ul>
   </div>
   <div class="details">
